force-app/main/default/objects/Lead/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <description>Count of logged Tasks and Events on this lead. Maintained by LeadService via trigger on Task/Event insert — native formula cannot count activities on Lead. Referenced by Lead_ConversionGate validation rule (minimum 3 required). Req: MKT-REQ-SALES-005.</description>
    <label>Activity Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>