force-app/main/default/objects/Lead/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <description>Catalyst Platform modules the lead expressed interest in. Captured via web-to-lead form. Used for lead routing and nurture segmentation. Req: MKT-REQ-SALES-001.</description>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Intelligence</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Attribution Engine</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>