force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Composite lead score 0–100. Populated by Einstein Lead Scoring in the Catalyst vertical. Used by LeadAssignmentService for routing decisions. Req: MKT-REQ-SALES-004.</description>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>