force-app/main/default/objects/Lead/validationRules/Lead_QualifiedFieldsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_QualifiedFieldsRequired</fullName>
    <active>true</active>
    <description>Enforces that Company and Email are populated before a lead can be set to Qualified status. Req: MKT-REQ-SALES-003.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Qualified&apos;) &amp;&amp; (ISBLANK(Company) || ISBLANK(Email))</errorConditionFormula>
    <errorMessage>Company and Email are required before a lead can be set to Qualified.</errorMessage>
</ValidationRule>